--- a/css/desk.css
+++ b/css/desk.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -48,7 +49,7 @@ li {
 }
 
 li > i {
-  display: none; /* Sembunyikan tag <i> pada layar kecil */
+  display: none;
 }
 
 nav > li > a > i {
@@ -80,7 +81,7 @@ img {
   height: 100vh;
 }
 
-section {
+.hero > section {
   height: 100%;
   display: flex;
   align-items: center;
@@ -102,6 +103,10 @@ section {
   margin-right: 28rem;
 }
 
+.container {
+  font-family: Montserrat;
+}
+
 .img-wrapper {
   display: flex;
   justify-content: flex-end;
@@ -110,6 +115,60 @@ section {
 #about {
   background-color: #b6c4b6;
 }
+
+.sf-heading {
+  display: flex;
+  justify-content: center;
+  color: #1b4242;
+  padding-top: 4rem;
+  font-size: 2rem;
+}
+
+.card-wrapper {
+  display: flex;
+  justify-content: center;
+  padding-top: 2rem;
+  gap: 5rem;
+}
+
+.card-skill {
+  background-color: #1b4242;
+  color: white;
+  width: 15rem;
+  height: 15rem;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  transition: 0.4s;
+  gap: 2rem;
+}
+
+.card-skill:hover {
+  background-color: white;
+  color: black;
+}
+
+.card-skill > i {
+  display: flex;
+  justify-content: center;
+  font-size: 4rem;
+}
+
+.card-skill > p {
+  font-size: 15pt;
+  font-weight: bold;
+}
+
+.hs-heading {
+  display: flex;
+  justify-content: center;
+  color: #1b4242;
+  padding-top: 6rem;
+  font-size: 2rem;
+}
+
 #project {
 }
 #contact {
