--- a/css/desk.css
+++ b/css/desk.css
@@ -62,8 +62,8 @@ a {
 }
 
 .img-wrapper > img {
-  width: 128px;
-  height: 128px;
+  width: 150px;
+  height: 150px;
   object-fit: cover;
   border-radius: 50%;
 }
@@ -73,8 +73,30 @@ a {
 }
 
 .project {
-  height: 100%;
+  height: 100vh;
 }
+
+.project > section {
+  padding: 4rem 15rem;
+}
+
+.project-wrapper {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.project-heading {
+  font-weight: bold;
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+}
+
+.card-project {
+  background-color: black;
+}
+
 .contact {
   height: 100vh;
 }
@@ -83,7 +105,7 @@ a {
   height: 100%;
   display: flex;
   align-items: center;
-  padding: 0 15rem;
+  padding: 0 35rem;
 }
 
 .hero-wrapper {
@@ -98,7 +120,7 @@ a {
 }
 
 .text-hero {
-  margin-right: 28rem;
+  margin-right: 10rem;
 }
 
 .container {
@@ -117,7 +139,7 @@ a {
 
 .about > section {
   height: 100%;
-  padding: 0 13rem;
+  padding: 0 15rem;
 }
 
 .sf-heading {
@@ -125,7 +147,7 @@ a {
   justify-content: center;
   color: #1b4242;
   padding-top: 4rem;
-  font-size: 2rem;
+  font-size: 24px;
 }
 
 .card-wrapper {
@@ -175,7 +197,7 @@ a {
   justify-content: center;
   color: #1b4242;
   padding-top: 6rem;
-  font-size: 2rem;
+  font-size: 24px;
 }
 
 .hs-icon {
@@ -195,8 +217,6 @@ a {
   border-radius: 8px;
 }
 
-#project {
-}
 #contact {
   background-color: #b6c4b6;
 }
