--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,20 @@
+@media (max-width: 1550px) {
+  .sosmed-wrapper {
+    padding-top: 4rem;
+  }
+
+  .hero > section {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 25rem;
+  }
+
+  .text-hero {
+    margin-right: 8rem;
+  }
+}
+
 @media (max-width: 1280px) {
   .text-hero {
     margin-bottom: 40pt;
@@ -32,6 +49,11 @@
   #about > section {
     padding: 0 2rem;
     padding-bottom: 2rem;
+  }
+
+  .img-wrapper > img {
+    width: 128px;
+    height: 128px;
   }
 
   .text-hero {
