--- a/css/desk.css
+++ b/css/desk.css
@@ -72,35 +72,6 @@ a {
   height: 100vh;
 }
 
-.project {
-  height: 100vh;
-}
-
-.project > section {
-  padding: 4rem 15rem;
-}
-
-.project-wrapper {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.project-heading {
-  font-weight: bold;
-  font-size: 24px;
-  display: flex;
-  justify-content: center;
-}
-
-.card-project {
-  background-color: black;
-}
-
-.contact {
-  height: 100vh;
-}
-
 .hero > section {
   height: 100%;
   display: flex;
@@ -169,11 +140,15 @@ a {
   flex-direction: column;
   align-items: center;
   transition: 0.4s;
-  gap: 1rem;
+  gap: 24px;
 }
 
 .card-skill:hover {
   background-color: white;
+  color: #1b4242;
+}
+
+.card-skill:hover > p {
   color: #1b4242;
 }
 
@@ -186,6 +161,7 @@ a {
 .card-skill > p {
   font-size: 13pt;
   font-weight: bold;
+  color: white;
 }
 
 .hard-skill {
@@ -215,10 +191,7 @@ a {
 .hs-icon > img:hover {
   background-color: white;
   border-radius: 8px;
-}
-
-#contact {
-  background-color: #b6c4b6;
+  mix-blend-mode: normal;
 }
 
 .myname {
@@ -229,6 +202,16 @@ a {
 .hero-wrapper {
   display: flex;
   flex-direction: column;
+}
+
+.sosmed-wrapper {
+  padding-top: 10rem;
+}
+
+.sosmed {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
 }
 
 //typing start
@@ -256,15 +239,6 @@ a {
   animation: none;
 }
 
-.sosmed-wrapper {
-  padding-top: 10rem;
-}
-
-.sosmed {
-  display: flex;
-  justify-content: space-between;
-  gap: 2rem;
-}
 @keyframes blink {
   0% {
     background-color: #ccc;
@@ -283,3 +257,192 @@ a {
   }
 }
 //typing end
+
+.project {
+  height: 100vh;
+}
+
+.project > section {
+  padding: 5rem 15rem;
+}
+
+.project-heading > h1 {
+  color: #1b4242;
+}
+
+.project-wrapper {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.project-heading {
+  font-weight: bold;
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+}
+
+.cardp-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.card-project {
+  display: flex;
+  flex-direction: column;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
+  max-width: 300px;
+  margin: 20px;
+}
+
+.card-project:hover {
+  box-shadow: 0 12px 18px rgba(0, 0, 0, 0.1);
+}
+
+.heading-card img {
+  width: 100%;
+  height: auto;
+}
+
+.content-card {
+  padding: 16px;
+}
+
+h3 {
+  font-size: 18px;
+  margin-bottom: 8px;
+}
+
+.content-card > p {
+  font-size: 14px;
+  color: #555;
+}
+
+.button-p {
+  display: flex;
+  padding: 12px;
+}
+
+.button-p > a > button {
+  border: 2px solid #000;
+  padding: 8px 16px;
+  background-color: transparent;
+  color: #000;
+  border-radius: 4px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.button-p > a > button:hover {
+  background-color: #1b4242;
+  color: white;
+}
+
+.contact {
+  height: 100%;
+}
+
+.contact > section {
+  padding: 10rem 30rem;
+}
+
+.contact-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.contact-heading {
+  text-align: center;
+  color: #1b4242;
+  padding-bottom: 2rem;
+  font-size: 24px;
+}
+
+.contact-heading > p {
+  font-size: 1rem;
+}
+
+.form-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.button-c {
+  display: flex;
+}
+
+.button-c > a > button {
+  border: 0.5px solid #000;
+  padding: 15px 26px;
+  background-color: #1b4242;
+
+  color: white;
+  border-radius: 4px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.button-c > a > button:hover {
+  background-color: transparent;
+  color: #000;
+}
+
+.button-content {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.button-content > img:hover {
+  mix-blend-mode: ;
+}
+
+.group-wrapper {
+  display: flex;
+  gap: 2em;
+}
+
+.input-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.text-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+}
+
+.text-group > input {
+  width: 100%;
+}
+
+input {
+  display: flex;
+  flex-direction: row;
+  width: 20rem;
+  height: 3rem;
+  padding: 1rem;
+  text-align: left;
+}
+
+form {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  flex-direction: column;
+}
